# kubecraft-proxy

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/: release-drafter.yml
.github/workflows/: check.yaml  ci.yaml  release.yaml
app/: Cargo.toml
app/src/: main.rs
event/: Cargo.toml
event/src/: lib.rs
event/src/handlers/: delete_backend.rs  list_backend.rs  mod.rs  put_backend.rs
listener/: Cargo.toml
listener/src/: event.rs  lib.rs
listener/src/listeners/: proxy.rs
proto/: build.rs
proto/src/: lib.rs  proxy.proto
protocol/: Cargo.toml
protocol/src/: lib.rs
protocol/src/packets/clientbound/: status.rs
protocol/src/packets/serverbound/: handshake.rs
proxy/: Cargo.toml
proxy/src/: backend.rs  lib.rs  storage.rs  stream.rs
shared/src/models/: backend.rs
storage/: Cargo.toml
storage/src/: lib.rs
