[package]
name = "event"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proto = { path = "../proto" }
storage = { path = "../storage" }
shared = { path = "../shared" }
tokio = { version = "1.26.0", features = [ "sync" ] }
tonic = "0.7.2"
anyhow = "1.0.63"
