[package]
name = "listener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proto = { path = "../proto" }
shared = { path = "../shared" }
tokio = { version = "1.0", features = ["full"] }
tonic = "0.7.2"
log = "0.4.17"
async-trait = "0.1.57"
tokio-stream = "0.1.10"
anyhow = "1.0.65"