[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol = { path = "../protocol" }
shared = { path = "../shared" }
listener = { path = "../listener" }
log = "0.4.17"
tokio = { version = "1.21.0", features = ["rt", "net", "io-util", "sync"] }
anyhow = "1.0.63"
